added model Company.php, CompanyController, necessary resources and requests, added and generated documentations and written tests
